--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: PetHubLocal Home Assistant Add-on
-url: https://github.com/PetHubLocal/addon
+url: https://github.com/EddyK69/addon
 maintainer: Peter Lambrechtsen <peter@crypt.nz>
