--- a/pethublocal/config.yaml
+++ b/pethublocal/config.yaml
@@ -3,7 +3,7 @@ version: 2.0.1
 slug: pethublocal
 name: Pet Hub Local
 description: An Local replacement for the SurePetCare Connect series of Pet Doors
-url: https://github.com/PetHubLocal/pethublocal
+url: https://github.com/EddyK69/pethublocal
 arch:
   - armhf
   - armv7
